Nu funkar category collapse, även fixat default avatar

--- a/resources/sass/templates/_table.scss
+++ b/resources/sass/templates/_table.scss
@@ -56,8 +56,8 @@
 		.table-row {
 			transition: background 0.1s ease-in-out;
 			background: $darkindigo;
-			margin: 0.25rem;
 			color: $white;
+			margin: 4px;
 			opacity: 0;
 
 			&.admin-post {
